# falsify

./: .gitignore  Cargo.toml  Makefile  README.md  coverage-floor.txt  install.sh
fetchfix/: Cargo.toml
fetchfix/src/: main.rs
fetchfix/tests/: golden.rs
fetchfix/tests/fixtures/: golden-1.err  golden-1.out  golden-2.err  golden-2.out  golden-3.err  golden-3.out  golden-4.err  golden-4.out  golden-5.err  input-1.txt  input-3.txt  input-4.txt  input-5.txt
fetchfix/tests/fixtures/src/: dup.md  sample.md
scripts/: coverage.sh
skill/: SKILL.md
skill/subagents/: adversarial.md  local-auditor.md
src/: contradict.rs  coverage.rs  fence.rs  main.rs  model.rs  persist.rs  store.rs  verify.rs  verify_evidence.rs
tests/: compound.rs  integrity.rs  pipeline.rs  safety.rs
tests/common/: mod.rs
verify-core/: Cargo.toml
verify-core/src/: lib.rs
