[workspace]
members = ["verify-core", "fetchfix"]

[package]
name = "falsify"
version = "0.1.0"
edition = "2021"
description = "Theory-falsification engine: deterministic substrate for claim → canon-audit → pinned verdict"

[[bin]]
name = "falsify"
path = "src/main.rs"

[dependencies]
verify-core = { path = "verify-core" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
regex = "1"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[profile.release]
opt-level = 3
lto = true
strip = true
